--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -8,11 +8,12 @@
 }
 
 div.none-event {
-  i {
-    margin: 0 , auto;
+  div.none-event-img {
+    text-align: center;
   }
 
   p {
-      margin: 0 ,auto;
+      margin: 10px auto;
+      text-align: center;
   }
 }
