--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,6 @@
 <tr>
-  <td>
-    <%= user.email %>
+  <td class="user-item">
+    <%= image_tag(user.avatar_url) %>
+    <span><%= user.email %><span>
   </td>
 </tr>
