--- a/app/views/welcome/_about.html.erb
+++ b/app/views/welcome/_about.html.erb
@@ -17,7 +17,9 @@
                     </ul>
                   <% else %>
                     <div class="none-event">
-                      <i class="fa fa-calendar-times-o fa-4x"></i> 
+                      <div class="none-event-img">
+                        <i class="fa fa-calendar-times-o fa-4x"></i> 
+                      </div>
                       <p>你还没有正在关注的活动,你可以进入活动页面关注它</p>
                     </div>  
                   <% end %>
