--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -13,7 +13,7 @@
               <%= render  favorite %> 
             <% end %>
           <% else %>
-             
+              <%= render "favorites/favorite_empty" %> 
           <% end %>
         </div>
     </div>
