--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -1,10 +1,14 @@
-<div class="panel panel-default">
+<div class="panel panel-default" id="group-application">
   <div class="panel-heading"> <%= @group.name%> </div>
   <div class="panel-body"> <%= application.content %> </div>
   <div class="panel-footer"> <%= current_user.email %></div>
 
-  <%= form_for [@group,application],url: agree_group_application_path(@group,application), method: :patch  do |f| %>
-    <%= f.submit 'Submit', :disable_with => 'Submiting...' , class:"btn btn-primary" %> 
+  <%= form_for [@group,application],url: agree_group_application_path(@group,application), method: :patch, remote: true  do |f| %>
+    <%= f.submit t(:agree_group_application), :disable_with => 'Submiting...' , class:"btn btn-primary" %> 
+  <% end %>
+
+  <%= form_for [@group,application],url: agree_group_application_path(@group,application), method: :patch, remote: true  do |f| %>
+    <%= f.submit t(:reject_group_application), :disable_with => 'Submiting...' , class:"btn btn-primary" %> 
   <% end %>
 
 </div>
