--- a/app/views/welcome/_portfolio_modal_empty.html.erb
+++ b/app/views/welcome/_portfolio_modal_empty.html.erb
@@ -1,5 +1,5 @@
 <!-- Portfolio Modal 2 -->
-<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="portfolioModalEmpty" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
             <div class="lr">
