--- a/app/views/welcome/_services.html.erb
+++ b/app/views/welcome/_services.html.erb
@@ -30,6 +30,16 @@
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x" id="main_help">
+                  <a href="/notifications">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-comment-o fa-stack-1x fa-inverse"></i>
+                  </a>
+                </span>
+                <h4 class="service-heading">通知</h4>
+                <p class="text-muted"> <%= t :notification_descript %></p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x" id="main_help">
                   <a href="/markdown">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-question-circle fa-stack-1x fa-inverse"></i>
