--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,6 +1,6 @@
 <table  class="table">
 <% for notification in @notifications %>
-  <tr>
+  <tr id="notification-<%= notification.id %>">
     <td>
      <%= link_to notification.title ,notification_path(notification) %> 
     </td>
@@ -8,7 +8,7 @@
       <%= "Introduction: #{notification.content}" %>
     </td>
     <td>
-      <%= link_to t(:mark_read), notification_path(notification) , method: "delete", class:"btn btn-primary" ,id: "mark_read", remote: true %>
+      <%= link_to t(:mark_read), notification_path(notification) , method: "delete", class:"btn btn-primary mark-read" , remote: true %>
     </td>
   </tr>
 <% end %>
