--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" ><i class="fa fa-user"></i>
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#"> <%= t :account %></a></li>
+                        <li><%= link_to t(:account), users_information_path%></li>
                         <li><%= link_to t(:logout), destroy_user_session_path,:method => :delete %></li> 
                       </ul>
                     </li>
