--- a/app/views/users/information/edit.html.erb
+++ b/app/views/users/information/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-9">
-  <%= form_for @user , url: users_information_path(@user) , html:{ method: :put ,enctype:  "multipart/form-data" } do |f| %>
+  <%= form_for @user , url: users_information_path(@user,format: :html) , html:{ method: :put ,enctype:  "multipart/form-data" } do |f| %>
    <div class="form-group">
     <%= f.label :name ,t(:user_name) %> 
     <%= f.text_field :name ,autofocus: true , class:"form-control" %>
@@ -17,6 +17,11 @@
     <%= f.file_field :avatar %>
     <%= f.hidden_field :avatar_cache %>
    </p>
+
+
+   <div class="form-group datepicker">
+    <%= f.label :age, t(:user_age) %>
+   <%= f.text_field :age,class:"form-control datepicker"%> 
 
 
    <div class="form-group">
