add information edit

--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -42,9 +42,12 @@ table {
   
   img {
     display: inline-block;
+    height: 24px;
+    width:  24px;
   } 
 
-  span {
+  a {
+    margin-left: 10px;
     display: inline-block;
   }
 }
