--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td class="user-item">
     <%= image_tag(user.avatar_url) %>
-    <span><%= user.email %><span>
+    <%= link_to user.name, users_show_information_path(user) %>
   </td>
 </tr>
