--- a/app/views/users/information/edit.html.erb
+++ b/app/views/users/information/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-9">
   <%= form_for @user , url: users_information_path(@user,format: :html) , html:{ method: :put ,enctype:  "multipart/form-data" } do |f| %>
+
    <div class="form-group">
     <%= f.label :name ,t(:user_name) %> 
     <%= f.text_field :name ,autofocus: true , class:"form-control" %>
@@ -13,7 +14,6 @@
 
    <p>
     <label> <%= t :user_avatar %></label>
-    <%= image_tag(@user.avatar_url) if @user.avatar? %>
     <%= f.file_field :avatar %>
     <%= f.hidden_field :avatar_cache %>
    </p>
@@ -21,7 +21,8 @@
 
    <div class="form-group datepicker">
     <%= f.label :age, t(:user_age) %>
-   <%= f.text_field :age,class:"form-control datepicker"%> 
+    <%= f.text_field :age,class:"form-control datepicker"%> 
+   </div>
 
 
    <div class="form-group">
