--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,56 +15,7 @@
 </head>
 <body id="page-top" class="index" data-no-turbolink="true">
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top"> <%= t :project_name %></a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href=<%= nav_href  "#services" %>> <%= t :service %></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href= <%= nav_href "#portfolio"%>> <%= t :favorite %></a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href=<%= nav_href "#about" %>> <%= t :track %></a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href=<%= nav_href "#team" %>> <%= t :team  %></a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href=<%= nav_href "#contact" %>> <%= t :contact %></a>
-                    </li>
-  
-                    <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#" ><i class="fa fa-user"></i>
-                      <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><%= link_to t(:account), users_information_path%></li>
-                        <li><%= link_to t(:logout), destroy_user_session_path,:method => :delete %></li> 
-                      </ul>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+    <%= render "layouts/navigation" %>
 
     <% if controller_name != 'welcome' %>
       <%= render 'layouts/header' %>
